data.analytic code chunk: completed barchart plot for aggregate frequency of weather events in the usa.

--- a/RR_PeerAssessment2.Rmd
+++ b/RR_PeerAssessment2.Rmd
@@ -432,7 +432,7 @@ stormsub <- StormData %>%
 pal <- pal[seq(length(pal), by = -1, length.out = length(evcnt$EVCLASS))]
 
 # set up global graphics parameters for the plots
-par(mfrow = c(1,2), ann = FALSE)
+par(mfrow = c(1,2), las = 1, cex.axis = 0.65, ann = FALSE)
 
 # aggregate weather events across the USA.
 evcnt <- stormsub %>%
@@ -441,18 +441,17 @@ evcnt <- stormsub %>%
         count(EVCLASS) 
 
 # plotting barchart for weather events aggregate across the USA.
-par(mai = c(0.75,1.15,0.50,0.15), las = 1, cex.axis = 0.65)
+par(mai = c(0.75,1.15,0.50,0.15))
 barplot(evcnt$n, horiz = TRUE, border = NA, col = pal, names.arg = unique(evcnt$EVCLASS))
 
 maxtik <- max(axTicks(1))
 m <- barplot(evcnt$n, horiz = TRUE, plot = FALSE)
 for (i in 1:length(m)) {
-        ifelse(evcnt$n[i] >= maxtik, v <- -2.0, v <- 0.25)
-        text(evcnt$n[i], m[i], labels = formatC(evcnt$n[i], big.mark = ","), pos = 4,  offset = v, cex = 0.60)
+        v <- ifelse(evcnt$n[i] >= maxtik, -2.25, 0.25)
+        text(evcnt$n[i], m[i], labels = formatC(evcnt$n[i], big.mark = ","), pos = 4,  offset = v, cex = 0.70)
 }
-# mtext("Weather Events Aggregate Across The USA (1950 ~ 2011)", cex = 1.00)
-# mtext("Weather Events Aggregate in USA (1950 ~ 2011)", side = 1, line = -2, adj = 1, cex = 0.75)
-# mtext("(US Affiliated Territories Not Included)", side = 1, line = -1.25, adj = 1, cex = 0.70)
+mtext("Aggregate Frequency of Weather Events in USA (1950 ~ 2011)", font = 2, side = 3, line = -1.25, adj = 1, cex = 0.75)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -2.00, adj = 1, cex = 0.65)
 
 # aggregate weather events manifested in casualty and economic loss across the USA.
 evcnt <- stormsub %>%
@@ -462,23 +461,22 @@ evcnt <- stormsub %>%
         count(EVCLASS) 
 
 # plotting barchart for weather events aggregated across the USA that manifested in fatalities/injuries and properties/crops damages across the USA.
-par(mai = c(0.75,0.15,0.50,1.15), yaxt = "n", las = 1, cex.axis = 0.65)
+par(mai = c(0.75,0.15,0.50,1.15), yaxt = "n")
 barplot(evcnt$n, horiz = TRUE, border = NA, col = pal, names.arg = unique(evcnt$EVCLASS))
 
 maxtik <- max(axTicks(1))
 m <- barplot(evcnt$n, horiz = TRUE, plot = FALSE)
 for (i in 1:length(m)) {
-        ifelse(evcnt$n[i] >= maxtik, v <- -2.0, v <- 0.25)
-        text(evcnt$n[i], m[i], labels = formatC(evcnt$n[i], big.mark = ","), pos = 4,  offset = v, cex = 0.60)
+        ifelse(evcnt$n[i] >= maxtik, v <- -2.25, v <- 0.25)
+        text(evcnt$n[i], m[i], labels = formatC(evcnt$n[i], big.mark = ","), pos = 4,  offset = v, cex = 0.70)
 }
-# mtext("Aggregate of Weather Events Manifested in Casualty & Economic Loss", side = 1, line = -2, adj = 1, cex = 0.80)
-# mtext("(US Affiliated Territories Not Included)", side = 1, line = -1.25, adj = 1, cex = 0.70)
+mtext("Aggregate Frequency of Weather Events in USA ()1950 ~ 2011)", font = 2, side = 3, line = -1.25, adj = 1, cex = 0.75)
+mtext("Manifested in Casualty & Economic Loss", font = 2, side = 3, line = -2.00, adj = 1, cex = 0.75)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -2.75, adj = 1, cex = 0.65)
 
 
-
-
-
-
+par(par.def)
+par(mfrow = c(2,1), cex.axis = 0.60, cex.lab = 0.75, ann = FALSE)
 
 # weather events aggregate of individual state.
 evcnt <- stormsub %>%
@@ -487,13 +485,13 @@ evcnt <- stormsub %>%
         count(EVCLASS, STATE) 
 
 # plotting barchart for the occurrence of weather-events of each state.
-par(mai = c(1.00,1.15,0.25,0.15), cex.axis = 0.60, cex.lab = 0.70, ann = TRUE)
+par(mai = c(0.25, 1.15, 0.25, 1.15))
 barplot(n ~ EVCLASS + as.character(STATE), data = evcnt, 
         horiz = FALSE, 
         border = NA,
-        col = pal,
-        ylab = "Weather Events Frequency of Individual-State")
-
+        col = pal)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -1.25, adj = 0, cex = 0.65)
+title(ylab = "Events Frequency of Individual-State")
 
 
 # aggregate weather events of individual state manifested in casualty and economic loss.
@@ -504,13 +502,18 @@ evcnt <- stormsub %>%
         count(EVCLASS, STATE) 
 
 # plotting barchart for weather-events that triggered the occurrences of fatalities/injuries and properties/crops damages for each state.
-par(mai = c(1.00,0.50,0.25,0.50), cex.axis = 0.60, cex.lab = 0.70, ann = FALSE)
+par(mai = c(1.00, 1.15, 0.25, 1.15))
 barplot(n ~ EVCLASS + as.character(STATE), data = evcnt, 
         horiz = FALSE, 
         border = NA,
         col = pal)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -1.25, adj = 0, cex = 0.65)
+title(ylab = "Events Frequency of Individual-State")
 
 par(par.def)
+
+# title(main = "Weather Events Aggregate Across The USA (1950 ~ 2011)", cex = 0.90)
+
 ```
 
 ```{r house.keeping}
